refactored code , home is responsive , contact and project and team are finished

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         </script>
         <!-- //Custom Theme files -->
         <!--web-font-->
-        <link href="//fonts.googleapis.com/css?family=Tangerine:400,700" rel="stylesheet" type="text/css">
         <!--//web-font-->
         <!-- js -->
         <script src="js/jquery-1.11.1.min.js"></script>
@@ -32,7 +31,7 @@
             		});
         </script>
         <!--//end-smoth-scrolling-->
-    <link rel="stylesheet" href="css\style.css"></head><body>
+    </head><body>
         <!--banner-->
         <div class="banner">
             <!--header-->
@@ -120,12 +119,12 @@
                     <!--banner Slider starts Here-->
                     <div class="row">
                         <!--Header Text -->
-                        <div class="col-md-6">
+                        <div class="col-md-6 col-sm-12">
                             <h3 class="text-center">YOUR TEXT HERE</h3>
                         </div>
                         <!--Header Image -->
-                        <div class="col-md-6">
-                            <img src="img/images/c-icon.png" class="header-img img-responsive">
+                        <div class="col-md-6 col-sm-12" >
+                            <img src="img/home/c-icon.png" class="header-img img-responsive">
                         </div>
                     </div>
                     <!--//End-slider-script-->
