--- a/team.html
+++ b/team.html
@@ -154,7 +154,7 @@
                 </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
                 <!--START TEAM MEMBER IMAGE -->
                 <div class="col-md-3 cel-member-img">
-                    <img src="img/team/amr.jpg" class="img img-responsive">
+                    <img src="img/team/amr.png" class="img img-responsive">
                 </div> <!--END TEAM MEMBER IMAGE -->
 
 
@@ -176,7 +176,7 @@
                     </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
                     <!--START TEAM MEMBER IMAGE -->
                     <div class="col-md-3 cel-member-img">
-                        <img src="img/team/rami.jpg" class="img img-responsive">
+                        <img src="img/team/ramy.png" class="img img-responsive">
                     </div> <!--END TEAM MEMBER IMAGE -->
 
 
@@ -209,7 +209,7 @@
                 </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
                 <!--START TEAM MEMBER IMAGE -->
                 <div class="col-md-3 cel-member-img">
-                    <img src="img/team/awaad.jpg" class="img img-responsive">
+                    <img src="img/team/awaad.png" class="img img-responsive">
                 </div> <!--END TEAM MEMBER IMAGE -->
 
 
@@ -231,7 +231,7 @@
                 </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
                 <!--START TEAM MEMBER IMAGE -->
                 <div class="col-md-3 cel-member-img">
-                    <img src="img/team/nour.jpg" class="img img-responsive">
+                    <img src="img/team/nour.png" class="img img-responsive">
                 </div> <!--END TEAM MEMBER IMAGE -->
 
 
@@ -239,6 +239,8 @@
 
             </div><!-- END TWO TEAM MEMBER AMR SAMY OR RAMY -->
 
+				<!--END OF SECOND ROW -->
+		   <div class="row cel-member">
             <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
             <div class="col-md-3 cel-member-info">
                 <!-- START TEAM MEMBER AMR SAMY OR RAMY (NAME) -->
@@ -257,7 +259,7 @@
             </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
             <!--START TEAM MEMBER IMAGE -->
             <div class="col-md-3 cel-member-img">
-                <img src="img/team/anan.jpg" class="img img-responsive">
+                <img src="img/team/anan.png" class="img img-responsive">
             </div> <!--END TEAM MEMBER IMAGE -->
 
 
@@ -279,13 +281,14 @@
             </div><!-- END TEAM MEMBER AMR SAMY OR RAMY (NAME,TITLE, DESC) -->
             <!--START TEAM MEMBER IMAGE -->
             <div class="col-md-3 cel-member-img">
-                <img src="img/team/mina.jpg" class="img img-responsive">
+                <img src="img/team/mina.png" class="img img-responsive">
             </div> <!--END TEAM MEMBER IMAGE -->
 
 
 
 
         </div><!-- END TWO TEAM MEMBER AMR SAMY OR RAMY -->
+        </div><!-- END OF THIRD ROW -->
 
             </div><!-- END CONTAINER -->
 
