--- a/contact.html
+++ b/contact.html
@@ -1,133 +1,118 @@
-<!--
-Author: Root Cave
-Author URL: http://rootcave.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE html>
-<html>
-<head>
-<title>Root Cave Show Case | Contact :: Root Cave </title>
-<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
-<link href="css/style.css" type="text/css" rel="stylesheet" media="all">
-<!-- Custom Theme files -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Framer Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-	Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- //Custom Theme files -->
-<!-- js -->
-<script src="js/jquery-1.11.1.min.js"></script> 
-<!-- //js -->	
-<!--web-font-->
-<link href='//fonts.googleapis.com/css?family=Tangerine:400,700' rel='stylesheet' type='text/css'>
-<!--//web-font-->
-<!-- start-smoth-scrolling-->
-<script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>	
-<script type="text/javascript">
+<html><head>
+	<title>Celebratory | Contact :: House of Celebration</title>
+	<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
+	<link href="css/entypo.css" rel="stylesheet" type="text/css" media="all">
+	<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
+	<link href="css/style.css" type="text/css" rel="stylesheet" media="all">
+	<!-- Custom Theme files -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="keywords" content="Framer Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
+
+	Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design">
+	<script type="application/x-javascript">
+		addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }
+	</script>
+	<!-- //Custom Theme files -->
+	<!--web-font-->
+	<link href="//fonts.googleapis.com/css?family=Tangerine:400,700" rel="stylesheet" type="text/css">
+	<!--//web-font-->
+	<!-- js -->
+	<script src="js/jquery-1.11.1.min.js"></script>
+	<!-- //js -->
+	<!-- start-smoth-scrolling-->
+	<script type="text/javascript" src="js/move-top.js"></script>
+	<script type="text/javascript" src="js/easing.js"></script>
+	<script type="text/javascript">
 		jQuery(document).ready(function($) {
-			$(".scroll").click(function(event){		
+			$(".scroll").click(function(event){
 				event.preventDefault();
 				$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
 			});
 		});
-</script>
-<!--//end-smoth-scrolling-->
-</head>
-<body>
-	<!--banner-->
-	<div class="banner">
-		<!--header-->
-		<div class="top-nav">
-			<nav class="navbar navbar-default">
-				<div class="container">
-					<span> </span>
-					<div class="navbar-header navbar-left">
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<h1><a href="index.html">Framer</a></h1>
-					</div>
-					<!--navigation-->
-					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-						<ul class="nav navbar-nav navbar-left">
-							<li class="hvr-bounce-to-bottom"><a href="index.html">Home</a></li>
-							<li class="hvr-bounce-to-bottom"><a href="about.html" >About</a></li>
-
-							<li class="hvr-bounce-to-bottom"><a href="gallery.html">Gallery</a></li>
-							<li class="hvr-bounce-to-bottom active"><a href="contact.html">Contact Us</a></li>
-						</ul>	
-						<div class="clearfix"> </div>
-					</div><!--//navigation-->
-				</div>	
-			</nav>		
-		</div>	
-		<!--//header-->
-		<div class="social-icons">
-			<ul>
-				<li><a href="#"> </a></li>
-				<li><a href="#" class="fb"> </a></li>
-				<li><a href="#" class="in"> </a></li>
-				<li><a href="#" class="dott"> </a></li>
-			</ul>
-		</div>
-		<!--banner-info-->
-		<div class="banner-info">
-			<!-- container -->
+	</script>
+	<!--//end-smoth-scrolling-->
+	<link rel="stylesheet" href="css\style.css"></head><body>
+<!--banner-->
+<div >
+	<!--header-->
+	<div class="top-nav">
+		<nav class="navbar navbar-default">
 			<div class="container">
-				<!--banner Slider starts Here-->
-				<script src="js/responsiveslides.min.js"></script>
-				<script>
-					// You can also use "$(window).load(function() {"
-					$(function () {
-					  // Slideshow 3
-					  $("#slider3").responsiveSlides({
-						auto: true,
-						pager: false,
-						nav: true,
-						speed: 500,
-						namespace: "callbacks",
-						before: function () {
-						  $('.events').append("<li>before event fired.</li>");
-						},
-						after: function () {
-						  $('.events').append("<li>after event fired.</li>");
-						}
-					  });
-				
-					});
-				</script>
-				<!--//End-slider-script-->
-				<div class="bnr-text">
-					<div  id="top" class="callbacks_container">
-						<ul class="rslides" id="slider3">
-							<li>				
-								<h2>Find your perfect new dream home</h2>
-								<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecat officia deserunt mollitia laborum et dolorum fuga.</p>								
-							</li>
-							<li>								
-								<h2>Lorem ipsum simply dummy text</h2>
-								<p>Vero eos at et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecat officia deserunt mollitia laborum et dolorum fuga.</p>
-							</li>
-							<li>
-								<h2>Dummy text lorem ipsum simply</h2>
-								<p>Dignissimos at vero eos et accusamus et iusto odio ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecat officia deserunt mollitia laborum et dolorum fuga.</p>
-							</li>
-						</ul>
-					</div>
-					<a href="#" class="more more-left">Learn More</a>
-					<a href="gallery.html" class="more more-right">Click</a>
-				</div>				
-			</div>			
-		</div>			
+				<span></span>
+				<div class="navbar-header navbar-left">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<!-- <h1><a href="index.html">Framer</a></h1> -->
+					<img src="img/celebratory.png" class="logo">
+				</div>
+				<!--navigation-->
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav navbar-left">
+						<li class="hvr-bounce-to-bottom ">
+							<a href="index.html">Home</a>
+						</li>
+						<li class="hvr-bounce-to-bottom">
+							<a href="about.html">About</a>
+						</li><li class="hvr-bounce-to-bottom">
+						<a href="projects.html">Projects</a>
+					</li>
+						<li class="hvr-bounce-to-bottom">
+							<a href="service.html">Service</a>
+						</li>
+						<li class="hvr-bounce-to-bottom ">
+							<a href="team.html">Team</a>
+						</li>
+						<li class="hvr-bounce-to-bottom">
+							<a href="hiring.html">Hiring</a>
+						</li>
+						<li class="hvr-bounce-to-bottom active">
+							<a href="contact.html" >Contact</a>
+						</li>
+					</ul>
+					<div class="clearfix"></div>
+				</div>
+				<!--//navigation-->
+			</div>
+		</nav>
 	</div>
-	<!--//banner-->
+	<!--//header-->
+	<aside id="sticky-social">
+		<ul>
+			<li>
+				<a href="#" class="entypo-facebook" target="_blank"><span>Facebook</span></a>
+			</li>
+			<li>
+				<a href="#" class="entypo-twitter" target="_blank"><span>Twitter</span></a>
+			</li>
+			<li>
+				<a href="#" class="entypo-play" target="_blank"><span>Youtube</span></a>
+			</li>
+			<li>
+				<a href="#" class="entypo-linkedin" target="_blank"><span>LinkedIn</span></a>
+			</li>
+			<li>
+				<a href="#" class="entypo-instagrem" target="_blank"><span>Instagram</span></a>
+			</li>
+			<li>
+				<a href="#" class="entypo-stumbleupon" target="_blank"><span>StumbleUpon</span></a>
+			</li>
+			<li>
+				<a href="#" class="entypo-pinterest" target="_blank"><span>Pinterest</span></a>
+			</li>
+			<li>
+				<a href="#" class="entypo-flickr" target="_blank"><span>Flickr</span></a>
+			</li>
+			<li>
+				<a href="#" class="entypo-tumblr" target="_blank"><span>Tumblr</span></a>
+			</li>
+		</ul>
+	</aside>
 	<!--contact-->
 	<div class="contact">
 		<div class="container">
@@ -169,80 +154,61 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>			
 	</div>
 	<!--//contact-->
+
 	<!-- footer-->
 	<div class="footer">
 		<div class="container">
 			<div class="footer-grids">
-				<div class="col-md-3 footer-grid">
-					<h3 class="title">Flickr Posts</h3>
-					<div class="footer-grd">
-						<a href="#">
-							<img src="images/7.jpg" class="img-responsive" alt=" ">
-						</a>
-					</div>
-					<div class="footer-grd">
-						<a href="#">
-							<img src="images/8.jpg" class="img-responsive" alt=" ">
-						</a>
-					</div>
-					<div class="footer-grd">
-						<a href="#">
-							<img src="images/9.jpg" class="img-responsive" alt=" ">
-						</a>
-					</div>
-					<div class="clearfix"> </div>
-					<div class="footer-grd">
-						<a href="#">
-							<img src="images/9.jpg" class="img-responsive" alt=" ">
-						</a>
-					</div>
-					<div class="footer-grd">
-						<a href="#">
-							<img src="images/7.jpg" class="img-responsive" alt=" ">
-						</a>
-					</div>
-					<div class="footer-grd">
-						<a href="#">
-							<img src="images/8.jpg" class="img-responsive" alt=" ">
-						</a>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="col-md-3 footer-grid">
-					<h3 class="title">Recent Posts</h3>
-					<ul>
-						<li><a href="#">Vestibulum felis</a></li>
-						<li><a href="#">Mauris at tellus</a></li>
-						<li><a href="#">Donec ut lectus</a></li>
-						<li><a href="#">vitae interdum</a></li>
-					</ul>
-				</div>
-				<div class="col-md-3 footer-grid">
-					<h3 class="title">Useful Info</h3>
-					<ul>
-						<li><a href="#">Hendrerit quam</a></li>
-						<li><a href="#">Amet consectetur </a></li>
-						<li><a href="#">Iquam hendrerit</a></li>
-						<li><a href="#">Donec ut lectus </a></li>
-					</ul>
-				</div>
-				<div class="col-md-3 footer-grid">
-					<h3 class="title">Contact Us</h3>
-					<p>Pelleesque conquat dignissim lacus quis altrcies.</p>
+				<div class="col-md-4 footer-grid ">
+					<h5 class="title">CONTACTS</h5>
+					<p>
+						<i class="fa fa-map-marker"></i>Pelleesque conquat dignissim lacus quis altrcies.</p>
 					<div class="footer-grid-address">
-						<p>Tel : 800-255-9999</p>
-						<p>Fax : 1234 568</p>
-						<p>Email : <a class="email-link" href="mailto:example@mail.com">mail@example.com</a></p>						
+						<p>
+							<i class="fa fa-mobile"></i>: 800-255-9999</p>
+						<p>
+							<i class="fa fa-mobile"></i>: 1234 568</p>
+						<p>
+							<i class="fa fa-envelope"></i>:
+							<a class="email-link" href="mailto:example@mail.com">mail@example.com</a>
+						</p>
 					</div>
+					<div class="clearfix"></div>
 				</div>
-				<div class="clearfix"> </div>
+				<div class="col-md-4 footer-grid text-center">
+					<h5 class="title">STAY CONNECTED</h5>
+					<ul class="fa-social">
+						<li>
+							<a href="http://facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+						</li>
+						<li>
+							<a href="http://instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+						</li>
+						<li>
+							<a href="http://twitter.com/" target="_blank"><i class="fa fa-twitter"></i></a>
+						</li>
+						<li>
+							<a href="http://youtube.com/" target="_blank"><i class="fa fa-youtube"></i> </a>
+						</li>
+						<li>
+							<a href="intent://send/01005399170#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end"><i class="fa fa-whatsapp"></i> </a>
+						</li>
+					</ul>
+				</div>
+				<div class="col-md-4 footer-grid">
+					<h5 class="title">SIGN UP FOR OUR EMAIL UPDATES</h5>
+					<ul></ul>
+				</div>
 			</div>
 		</div>
 	</div>
-	<div class="clear"> </div>
+	<div class="clear"></div>
 	<div class="copy-right">
 		<div class="container">
-			<p> © 2015 Root Cave. All rights reserved | Design by <a href="http://rootcave.com"> Root Cave </a></p>
+			<p>© 2015
+				<a href="index.html">Celebratory</a>. All rights reserved | Design by
+				<a href="http://rootcave.com">Root Cave </a>
+			</p>
 		</div>
 	</div>
 	<!--//footer-->
@@ -250,23 +216,25 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<script type="text/javascript">
 		$(document).ready(function() {
 			/*
-			var defaults = {
-				containerID: 'toTop', // fading element id
-				containerHoverID: 'toTopHover', // fading element hover id
-				scrollSpeed: 1200,
-				easingType: 'linear' 
-			};
-			*/
-			
+			 var defaults = {
+			 containerID: 'toTop', // fading element id
+			 containerHoverID: 'toTopHover', // fading element hover id
+			 scrollSpeed: 1200,
+			 easingType: 'linear'
+			 };
+			 */
+
 			$().UItoTop({ easingType: 'easeOutQuart' });
-			
+
 		});
 	</script>
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 	<!--//smooth-scrolling-of-move-up-->
-	<!-- Bootstrap core JavaScript
-    ================================================== -->
+	<!-- Bootstrap core JavaScript==================================================-
+    ->
+
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/bootstrap.js"></script>
-</body>
-</html>
+	<script src="js/bootstrap.js"></script>
+
+
+</div></body></html>
